<resources>
    <string name="app_name">10119186Latihan2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="connect">CONNECT WITH FACEBOOK</string>
    <string name="doesnt">doesnt have account?</string>
    <string name="register">Register</string>

    <string name="phone">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bt">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="email">Email</string>
    <string name="retype">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="location">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>

    <string name="almost">Almost There</string>
    <string name="thank">Thank you for registering with us. One more step, you neet to check your email to activate your account</string>
    <string name="verify">VERIFY</string>

    <string name="verivyyour">Verify Your Account</string>
    <string name="wehave">We have send notification code to your email</string>
    <string name="enter">enter verification code here</string>
    <string name="send">SEND</string>
    <string name="doesnt2">doesnt get the code?</string>
    <string name="resend">Resend</string>

    <string name="nama">Rika Nur Adila</string>
    <string name="goldar">Blood Type : A</string>
    <string name="give">BLOOD GIVE</string>
    <string name="received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search">Search Donor</string>
    <string name="near">Search donor near you</string>
    <string name="needed">Blood Needed</string>
    <string name="need">4 user need blood</string>
    <string name="message">Message</string>
    <string name="message2">5 New Messages</string>
    <string name="history">Donor History</string>
    <string name="history2">5 Gives, 2 Received</string>
    <string name="tujuhlima">75</string>
    <string name="cepe">100</string>
    <string name="tigatiganol">330</string>


</resources>