<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ic_header"
        android:elevation="@dimen/dimen3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dimen30dp"
            android:layout_height="@dimen/dimen30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen19dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen15dp"
        android:layout_marginLeft="@dimen/dimen10dp"
        android:layout_marginRight="@dimen/dimen10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/username"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/email"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/phone"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen3dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen40dp"
                android:text="@string/male"
                android:textColor="@color/separator" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/separator"
                android:layout_marginLeft="@dimen/dimen120dp"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen4dp">
            <Spinner
                android:id="@+id/blood_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen20dp"
                android:entries="@array/bloodtype">
            </Spinner>
            <Spinner
                android:id="@+id/reshus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen80dp"
                android:entries="@array/rhesus">
            </Spinner>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/password"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/retype"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <RadioGroup
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen3dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen40dp"
                android:text="@string/personal"
                android:textColor="@color/separator" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:textColor="@color/separator"
                android:layout_marginLeft="@dimen/dimen90dp"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40dp"
            android:entries="@array/job"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:layout_marginTop="@dimen/dimen5dp">
        </Spinner>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/home_address"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:backgroundTint="@color/separator"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:text="@string/location"
            android:textColor="@color/separator"
            android:textSize="@dimen/dimen16dp"
            android:drawableRight="@drawable/ic_blood_needed_location"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen2dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen20dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen20dp"
                android:text="@string/agree"
                android:textColor="@color/separator"
                android:textSize="@dimen/dimen16dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:background="@drawable/border_button_r"
            android:text="@string/register"
            android:textColor="@color/pictonb"
            android:onClick="register"/>
    </LinearLayout>
    
</RelativeLayout>