<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/h_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen160dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_header_profile" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="@dimen/dimen50dp"
            android:layout_height="@dimen/dimen50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen15dp"
            android:layout_marginRight="@dimen/dimen15dp"
            android:src="@drawable/ic_notification" />

        <ImageView
            android:id="@+id/side_menu"
            android:layout_width="@dimen/dimen50dp"
            android:layout_height="@dimen/dimen50dp"
            android:layout_marginLeft="@dimen/dimen15dp"
            android:layout_marginTop="@dimen/dimen15dp"
            android:src="@drawable/ic_side_menu"/>

        <ImageView
            android:layout_width="119dp"
            android:layout_height="119dp"
            android:layout_marginLeft="@dimen/dimen142dp"
            android:layout_marginTop="@dimen/dimen80dp"
            android:background="@drawable/bulat_profile" />

        <ImageView
            android:layout_width="@dimen/dimen100dp"
            android:layout_height="@dimen/dimen100dp"
            android:layout_marginLeft="@dimen/dimen152dp"
            android:layout_marginTop="88dp"
            android:src="@drawable/img_profile_circle" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/nama_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen135dp"
            android:layout_marginRight="@dimen/dimen135dp"
            android:text="@string/nama"
            android:textSize="@dimen/dimen20dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/pictonb"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:layout_marginLeft="@dimen/dimen150dp"
            android:layout_marginRight="139dp"
            android:text="@string/goldar"
            android:textSize="@dimen/dimen16dp"
            android:fontFamily="@font/araboto_light_400"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen1dp"
            android:layout_marginTop="@dimen/dimen5dp"
            android:background="@color/separator"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blood_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen8dp"
        android:layout_marginLeft="@dimen/dimen30dp"
        android:layout_marginRight="@dimen/dimen30dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tujuhlima"
                android:textColor="@color/pictonb"
                android:textSize="@dimen/dimen30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen13dp"
                android:text="@string/received"
                android:fontFamily="@font/roboto_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cepe"
                android:textColor="@color/pictonb"
                android:textSize="@dimen/dimen30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:textSize="@dimen/dimen13dp"
                android:fontFamily="@font/roboto_medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tigatiganol"
                android:textColor="@color/pictonb"
                android:textSize="@dimen/dimen30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/dimen13dp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen1dp"
        android:layout_marginTop="@dimen/dimen5dp"
        android:background="@color/separator"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_marginTop="@dimen/dimen15dp"
        android:layout_marginLeft="@dimen/dimen30dp"
        android:layout_marginRight="@dimen/dimen30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen100dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:src="@drawable/ic_search_donor"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/near"
                    android:textSize="@dimen/dimen14dp"
                    android:textColor="@color/separator"
                    android:fontFamily="@font/araboto_light_400"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="45dp">
                <ImageView
                    android:layout_width="@dimen/dimen100dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:src="@drawable/ic_blood_needed"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/needed"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen15dp"
                    android:text="@string/need"
                    android:textSize="@dimen/dimen14dp"
                    android:textColor="@color/separator"
                    android:fontFamily="@font/araboto_light_400"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen20dp"
                android:layout_marginTop="@dimen/dimen15dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/dimen100dp"
                        android:layout_height="@dimen/dimen100dp"
                        android:src="@drawable/ic_message"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message2"
                        android:textSize="@dimen/dimen14dp"
                        android:textColor="@color/separator"
                        android:fontFamily="@font/araboto_light_400"/>
                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen64dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen100dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:layout_marginLeft="@dimen/dimen1dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_donor_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen0dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/history"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen10dp"
                    android:fontFamily="@font/araboto_light_400"
                    android:text="@string/history2"
                    android:textAlignment="center"
                    android:textColor="@color/separator"
                    android:textSize="@dimen/dimen14dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>