<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pictonb"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/dimen150dp"
            android:layout_height="@dimen/dimen150dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen40dp"
            android:src="@drawable/ic_welcome_logo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen25dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:backgroundTint="@color/white"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen15dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:backgroundTint="@color/white"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen16dp"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen39dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:background="@drawable/border_button"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen15dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen25dp"
            android:layout_marginTop="@dimen/dimen15dp"
            android:layout_marginRight="@dimen/dimen25dp"
            android:background="@drawable/border_button"
            android:text="@string/register"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15dp"
                android:text="@string/doesnt"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen19dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/dimen15dp"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen19dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>